[tool.poetry]
name = "meerpipe"
version = "3.0.2"
description = "Pulsar timing data processing pipeline for MeerTime data."
authors = ["Your Name <you@example.com>"]
packages = [{include = "meerpipe"}]
include = [
    "meerpip/data/UHF_Tsky.dat",
    "meerpip/data/CHIPASS_Equ.fits",
    "meerpip/data/meerpipe_rms_msps.txt.dat",
    "meerpip/data/ptuse.dlycfg",
    "meerpip/data/928ch_frequency_reference.npy",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
fluxcal                 = "meerpipe.scripts.fluxcal:main"
generate_images_results = "meerpipe.scripts.generate_images_results:main"
dlyfix                  = "meerpipe.scripts.dlyfix:main"
make_stokes_movie       = "meerpipe.scripts.make_stokes_movie:main"
chop_edge_channels      = "meerpipe.scripts.chop_edge_channels:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
